--- a/templates/default/consul-init.erb
+++ b/templates/default/consul-init.erb
@@ -14,6 +14,10 @@
 #                       * Multi Datacenter
 ### END INIT INFO
 
+if [ -f /etc/sysconfig/consul ]; then
+. /etc/sysconfig/consul
+fi
+
 CMD="<%= @consul_binary %> agent -config-dir <%= @config_dir %>"
 NAME="consul"
 
