Init environment setup
environment export should sit within init script not sysconfig

--- a/templates/default/consul-init.erb
+++ b/templates/default/consul-init.erb
@@ -18,6 +18,8 @@ if [ -f /etc/sysconfig/consul ]; then
 . /etc/sysconfig/consul
 fi
 
+export GOMAXPROCS=${GOMAXPROCS:-2}
+
 CMD="<%= @consul_binary %> agent -config-dir <%= @config_dir %>"
 NAME="consul"
 
