--- a/templates/default/consul-init.erb
+++ b/templates/default/consul-init.erb
@@ -18,7 +18,7 @@ if [ -f /etc/sysconfig/consul ]; then
 . /etc/sysconfig/consul
 fi
 
-export GOMAXPROCS=${GOMAXPROCS:-2}
+export GOMAXPROCS=${GOMAXPROCS}
 
 CMD="<%= @consul_binary %> agent -config-dir <%= @config_dir %>"
 NAME="consul"
