--- a/templates/default/consul.conf.erb
+++ b/templates/default/consul.conf.erb
@@ -1,5 +1,7 @@
 description "Consul Service Discovery Platform"
 
+emits consul-up
+
 start on runlevel [2345]
 stop on runlevel [!2345]
 
@@ -12,3 +14,5 @@ script
   LOGFILE="/var/log/consul.log"
   exec $CMD >> "$LOGFILE"
 end script
+
+post-start exec initctl emit consul-up
