--- a/templates/default/consul-init.erb
+++ b/templates/default/consul-init.erb
@@ -38,7 +38,7 @@ case "$1" in
     else
         echo "Starting $NAME"
         exec 2> >(while IFS= read -r line; do logger -t consul "$line"; done)
-        eval "${CMD[@]}" >> "$LOGFILE" &
+        "${CMD[@]}" >> "$LOGFILE" &
         echo $! > "$PIDFILE"
         if ! is_running; then
             echo "Unable to start $NAME, see $LOGFILE"
