{1..10} does not work in sh

--- a/templates/default/consul-init.erb
+++ b/templates/default/consul-init.erb
@@ -52,7 +52,7 @@ case "$1" in
     if is_running; then
         echo -n "Stopping $NAME..."
         kill -INT `get_pid`
-        for i in {1..10}
+        for i in 1 2 3 4 5 6 7 8 9 10
         do
             if ! is_running; then
                 break
