--- a/templates/default/consul-service.xml.erb
+++ b/templates/default/consul-service.xml.erb
@@ -3,7 +3,7 @@
   <name>Consul</name>
   <description>consul.io Agent</description>
   <executable>consul.exe</executable>
-  <arguments>agent -config-dir=<%= node['consul']['install_dir'] %></arguments>
+  <arguments>agent -config-dir=<%= node['consul']['config_dir'] %> -data-dir=<%= node['consul']['data_dir'] %></arguments>
   <logmode>rotate</logmode>
   <startmode>delayed-auto</startmode>
   <depend>Winmgmt</depend>
