--- a/templates/default/consul.conf.erb
+++ b/templates/default/consul.conf.erb
@@ -10,7 +10,7 @@ script
     . <%= node['consul']['etc_config_dir'] %>
   fi
   export GOMAXPROCS=${GOMAXPROCS}
-  CMD="<%= @consul_binary %> agent -config-dir <%= @config_dir %>"
+  CMD="<%= Chef::Consul.active_binary(node) %> agent -config-dir <%= node['consul']['config_dir'] %>"
   LOGFILE="/var/log/consul.log"
   exec $CMD >> "$LOGFILE"
 end script
