correction to EL init template for active binary and config dir arguments to agent

--- a/templates/default/consul-init.erb
+++ b/templates/default/consul-init.erb
@@ -20,7 +20,7 @@ fi
 
 export GOMAXPROCS=${GOMAXPROCS}
 
-CMD="<%= @consul_binary %> agent -config-dir <%= @config_dir %>"
+CMD="<%= Chef::Consul.active_binary(node) %> agent -config-dir <%= node['consul']['config_dir'] %>"
 NAME="consul"
 
 PIDFILE="/var/run/$NAME.pid"
