--- a/templates/default/consul-systemd.erb
+++ b/templates/default/consul-systemd.erb
@@ -7,7 +7,8 @@ After=basic.target network.target
 User=<%= node['consul']['service_user'] %>
 Group=<%= node['consul']['service_group'] %>
 ExecStart=<%= Chef::Consul.active_binary(node) %> agent \
-  -config-dir <%= node['consul']['config_dir'] %>
+  -config-dir <%= node['consul']['config_dir'] %> \
+  -pid-file <%= node['consul']['pid_file'] %>
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=process
 Restart=on-failure
