Ensure GOMAXPROCS is at least 2

--- a/templates/default/sv-consul-run.erb
+++ b/templates/default/sv-consul-run.erb
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-export GOMAXPROCS=<%= node['cpu']['total'] %>
+export GOMAXPROCS=<%= [node['cpu']['total'], 2].max %>
 
 exec 2>&1
 exec <%= node['runit']['chpst_bin'] %> \
