--- a/templates/default/consul.conf.erb
+++ b/templates/default/consul.conf.erb
@@ -11,7 +11,7 @@ script
   fi
   export GOMAXPROCS=${GOMAXPROCS}
   CMD="<%= Chef::Consul.active_binary(node) %> agent -config-dir <%= node['consul']['config_dir'] %>"
-  LOGFILE="/var/log/consul.log"
+  LOGFILE="<%= @consul_logfile %>"
   exec $CMD >> "$LOGFILE"
 end script
 
