Give consul time to install its HUP signal handler to avoid immediate shutdown when invoked via knife ssh (or any short-lived pty), fixes #125.

--- a/templates/default/consul-init.erb
+++ b/templates/default/consul-init.erb
@@ -48,6 +48,7 @@ case "$1" in
         CONSULPID=$!
         echo $CONSULPID > "$PIDFILE"
         TIMEOUT="$STARTIMEOUT"
+        sleep <%= @startup_sleep %>
         while [ $TIMEOUT -gt 0 ]; do
             if is_running; then
                 break
