--- a/templates/default/consul.conf.erb
+++ b/templates/default/consul.conf.erb
@@ -5,6 +5,9 @@ emits consul-up
 start on runlevel [2345]
 stop on runlevel [!2345]
 
+# set max open files
+limit nofile <%= @soft_limit %> <%= @hard_limit %>
+
 script
   if [ -f <%= node['consul']['etc_config_dir'] %> ]; then
     . <%= node['consul']['etc_config_dir'] %>
