Added chkconfig lines for CentOS 5
Without these two lines chkconfig on CentOS 5 complains when trying
to check its status.

--- a/templates/default/sysvinit.service.erb
+++ b/templates/default/sysvinit.service.erb
@@ -2,6 +2,9 @@
 #
 # <%= @name %> - this script manages the consul agent
 #
+# chkconfig: 345 99 70
+# description: this script manages the consul agent
+#
 ### BEGIN INIT INFO
 # Provides:       <%= @name %>
 # Required-Start: $local_fs $network
