missing do in while loop upstart.service.erb line 51

--- a/templates/default/upstart.service.erb
+++ b/templates/default/upstart.service.erb
@@ -48,5 +48,5 @@ pre-stop script
 end script
 <%- end -%>
 post-start script
-  while ! <%= @options[:executable] %> info ; sleep 1; done
+  while ! <%= @options[:executable] %> info ; do sleep 1; done
 end script
