--- a/templates/default/sysvinit.service.erb
+++ b/templates/default/sysvinit.service.erb
@@ -9,8 +9,8 @@
 # Provides:       <%= @name %>
 # Required-Start: $local_fs $network
 # Required-Stop:  $local_fs $network
-# Default-Start: 3 4 5
-# Default-Stop:  0 1 2 6
+# Default-Start: 2 3 4 5
+# Default-Stop: 0 1 6
 # Short-Description: Manage the consul agent
 ### END INIT INFO
 
