--- a/templates/default/sysvinit.service.erb
+++ b/templates/default/sysvinit.service.erb
@@ -40,7 +40,7 @@ _start() {
 
   echo -n "Waiting for consul daemon to be listening..."
   for i in `seq 1 30`; do
-    if ! start-stop-daemon --quiet --stop --test --pidfile $pidfile --user $user; then
+    if ! _status_q; then
       echo " FAIL: consul process died"
       return 2
     fi
