Restore the ability to set a custom open file limit
This seems to have existed, at least for Upstart, in [older versions](https://github.com/sous-chefs/consul/blob/v0.11.1/attributes/default.rb#L123) of the cookbook, but disappeared with the conversion to poise-service.

The Kitchen suites have a pretty basic default config that I was hesitant to mess with, hence the new test suite, which could also be used to validate other config overrides in the future. If the additional build time is going to be a problem, I can rip those tests back out or put them in the default suite.

Signed-off-by: Jonathan Hartman <j@hartman.io>

--- a/templates/default/systemd.service.erb
+++ b/templates/default/systemd.service.erb
@@ -10,6 +10,9 @@ ExecReload=/bin/kill -<%= @reload_signal %> $MAINPID
 KillSignal=<%= @stop_signal %>
 User=<%= @user %>
 WorkingDirectory=<%= @directory %>
+<%- if @options['nofile_limit'] -%>
+LimitNOFILE=<%= @options['nofile_limit'] %>
+<%- end -%>
 
 [Install]
 WantedBy=multi-user.target
