--- a/templates/default/systemd.service.erb
+++ b/templates/default/systemd.service.erb
@@ -10,6 +10,13 @@ ExecReload=/bin/kill -<%= @reload_signal %> $MAINPID
 KillSignal=<%= @stop_signal %>
 User=<%= @user %>
 WorkingDirectory=<%= @directory %>
+<% if node['consul']['config']['server'] %>
+SecureBits=keep-caps
+AmbientCapabilities=CAP_NET_BIND_SERVICE
+Capabilities=CAP_NET_BIND_SERVICE=+ep
+CapabilityBoundingSet=CAP_SYSLOG CAP_NET_BIND_SERVICE
+<% end %>
+
 
 [Install]
 WantedBy=multi-user.target
