change systemd template to wait for network to come online before starting

--- a/templates/default/systemd.service.erb
+++ b/templates/default/systemd.service.erb
@@ -1,7 +1,7 @@
 [Unit]
 Description=<%= @name %>
-Wants=network.target
-After=network.target
+Wants=network-online.target
+After=network-online.target
 
 [Service]
 Environment=<%= @environment.map {|key, val| %Q{"#{key}=#{val}"} }.join(' ') %>
