--- a/templates/default/sysvinit.service.erb
+++ b/templates/default/sysvinit.service.erb
@@ -14,6 +14,8 @@
 # Short-Description: Manage the consul agent
 ### END INIT INFO
 
+<%= "limit nofile #{node['consul']['service_nofile']}" if node['consul']['service_nofile'] %>
+
 prog="<%= File.basename(@daemon) %>"
 user="<%= @user %>"
 exec="<%= @daemon %>"
