--- a/templates/default/upstart.service.erb
+++ b/templates/default/upstart.service.erb
@@ -5,6 +5,8 @@ description "<%= @name %>"
 start on runlevel [2345]
 stop on runlevel [!2345]
 
+<%= "limit nofile #{node['consul']['service_nofile']}" if node['consul']['service_nofile'] %>
+
 respawn
 respawn limit 10 5
 umask 022
